--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
             <div class="main-menu__logo">
               <a href="index.html">
                 <img
-                  src="assets/images/logo-light.png"
-                  width="34"
-                  height="34"
+                  src="assets/images/bdlogo.png"
+                  width="250"
+                  height="48"
                   alt="Ogency"
                 />
               </a>
