--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
               <a href="index.html">
                 <img
                   src="assets/images/bdlogo.png"
-                  width="250"
-                  height="48"
-                  alt="Ogency"
+                  width="300"
+                  height="58"
+                  alt="Brandefenders"
                 />
               </a>
             </div>
