--- a/index.html
+++ b/index.html
@@ -3,26 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home One || Ogency || HTML Template For Creative Agency</title>
-    <!-- favicons Icons -->
+    <title>Brandefenders Home</title>
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="assets/images/favicons/apple-touch-icon.png"
+      href="/assets/images/favicons/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="assets/images/favicons/favicon-32x32.png"
+      href="/assets/images/favicons/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="assets/images/favicons/favicon-16x16.png"
+      href="/assets/images/favicons/favicon-16x16.png"
     />
-    <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
+    <link rel="manifest" href="/assets/images/favicons/site.webmanifest" />
     <meta
       name="description"
       content="Ogency HTML Template For Creative Agency"
@@ -90,6 +89,9 @@
     </div>
     <!-- /.preloader -->
     <div class="page-wrapper">
+      <!-- ---------------------------------------------------------- -->
+      <!-- HEADER: MAIN MENU LOGO -->
+      <!-- ---------------------------------------------------------- -->
       <header class="main-header">
         <nav class="main-menu">
           <div class="container-fluid">
@@ -103,7 +105,10 @@
                 />
               </a>
             </div>
-            <!-- /.main-menu__logo -->
+
+            <!-- ---------------------------------------------------------- -->
+            <!-- HOME MENU ITEM SHOWCASE PAGES  -->
+            <!-- ---------------------------------------------------------- -->
             <div class="main-menu__nav">
               <ul class="main-menu__list">
                 <li class="dropdown megamenu">
@@ -239,6 +244,9 @@
                     </li>
                   </ul>
                 </li>
+                <!-- ---------------------------------------------------------- -->
+                <!-- MENU ITEM 2 AND DROPDOWN  -->
+                <!-- ---------------------------------------------------------- -->
                 <li class="dropdown">
                   <a href="#">Pages</a>
                   <ul>
@@ -256,6 +264,9 @@
                     <li><a href="404.html">404 error</a></li>
                   </ul>
                 </li>
+                <!-- ---------------------------------------------------------- -->
+                <!-- MENU ITEM 3  -->
+                <!-- ---------------------------------------------------------- -->
                 <li class="dropdown">
                   <a href="#">Services</a>
                   <ul>
@@ -285,6 +296,9 @@
                     <li><a href="web-application.html">Web application</a></li>
                   </ul>
                 </li>
+                <!-- ---------------------------------------------------------- -->
+                <!-- MENU ITEM 4  -->
+                <!-- ---------------------------------------------------------- -->
                 <li class="dropdown">
                   <a href="#">Portfolio</a>
                   <ul>
@@ -297,6 +311,9 @@
                     </li>
                   </ul>
                 </li>
+                <!-- ---------------------------------------------------------- -->
+                <!-- MENU ITEM 5  -->
+                <!-- ---------------------------------------------------------- -->
                 <li class="dropdown">
                   <a href="#">Shop</a>
                   <ul class="sub-menu">
@@ -316,6 +333,9 @@
                     <li><a href="checkout.html">Checkout</a></li>
                   </ul>
                 </li>
+                <!-- ---------------------------------------------------------- -->
+                <!-- MENU ITEM 6  -->
+                <!-- ---------------------------------------------------------- -->
                 <li class="dropdown">
                   <a href="#">Blog</a>
                   <ul class="sub-menu">
@@ -354,17 +374,28 @@
                     </li>
                   </ul>
                 </li>
+                <!-- ---------------------------------------------------------- -->
+                <!-- MENU ITEM 7  -->
+                <!-- ---------------------------------------------------------- -->
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
-            <!-- /.main-menu__nav -->
+            <!-- ---------------------------------------------------------- -->
+            <!-- MOBILE MENU BUTTON -->
+            <!-- ---------------------------------------------------------- -->
             <div class="main-menu__right">
               <a href="#" class="main-menu__toggler mobile-nav__toggler">
-                <i class="fa fa-bars"></i> </a
-              ><!-- /.mobile menu btn -->
+                <i class="fa fa-bars"></i>
+              </a>
+              <!-- ---------------------------------------------------------- -->
+              <!-- SEARCH ICON  -->
+              <!-- ---------------------------------------------------------- -->
               <a href="#" class="main-menu__search search-toggler">
-                <i class="icon-magnifying-glass"></i> </a
-              ><!-- /.search btn -->
+                <i class="icon-magnifying-glass"></i>
+              </a>
+              <!-- ---------------------------------------------------------- -->
+              <!-- CART ICON  -->
+              <!-- ---------------------------------------------------------- -->
               <a href="cart.html" class="main-menu__cart cart-toggler">
                 <i class="icon-shopping-cart"></i> </a
               ><!-- /.cart btn -->
@@ -375,14 +406,19 @@
         </nav>
         <!-- /.main-menu -->
       </header>
-      <!-- /.main-header -->
+      <!-- ---------------------------------------------------------- -->
+      <!-- END MAIN HEADER  -->
+      <!-- ---------------------------------------------------------- -->
 
       <div class="stricky-header stricked-menu main-menu">
         <div class="sticky-header__content"></div>
         <!-- /.sticky-header__content -->
       </div>
       <!-- /.stricky-header -->
-      <!--Main Slider Start-->
+
+      <!-- ---------------------------------------------------------- -->
+      <!-- MAIN SLIDER START  -->
+      <!-- ---------------------------------------------------------- -->
       <section class="main-slider">
         <div
           class="main-slider__one ogency-owl__carousel owl-carousel"
@@ -400,7 +436,9 @@
 	    }'
         >
           <div class="item">
-            <!-- slider item start -->
+            <!-- ---------------------------------------------------------- -->
+            <!-- SLIDER ITEM 1 START  -->
+            <!-- ---------------------------------------------------------- -->
             <div class="main-slider__one-item">
               <!-- bg image start -->
               <div
@@ -428,15 +466,24 @@
                 <div class="row">
                   <div class="col-xl-8">
                     <div class="main-slider__one-item__content">
+                      <!-- ---------------------------------------------------------- -->
+                      <!-- HERO TEXT SLIDE 1  -->
+                      <!-- ---------------------------------------------------------- -->
                       <h2 class="heading-1-font-light">
-                        More then<br />
+                        More than<br />
                         just a design<br />
                         agency
                       </h2>
+                      <!-- ---------------------------------------------------------- -->
+                      <!-- CURVED CIRCLE CTA LINK -->
+                      <!-- ---------------------------------------------------------- -->
                       <a
                         href="about.html"
                         class="main-slider__one-item__content-curved-circle-box"
                       >
+                        <!-- ---------------------------------------------------------- -->
+                        <!-- CURVED CIRCLE CTA TEXT -->
+                        <!-- ---------------------------------------------------------- -->
                         <div class="curved-circle">
                           <!-- curved-circle start-->
                           <span class="curved-circle--item">
@@ -485,15 +532,24 @@
                 <div class="row">
                   <div class="col-xl-8">
                     <div class="main-slider__one-item__content">
+                      <!-- ---------------------------------------------------------- -->
+                      <!-- HERO TEXT SLIDE 2  -->
+                      <!-- ---------------------------------------------------------- -->
                       <h2 class="heading-1-font-light">
-                        More then<br />
+                        More than<br />
                         just a design<br />
                         agency
                       </h2>
+                      <!-- ---------------------------------------------------------- -->
+                      <!-- CURVED CIRCLE CTA LINK  -->
+                      <!-- ---------------------------------------------------------- -->
                       <a
                         href="about.html"
                         class="main-slider__one-item__content-curved-circle-box"
                       >
+                        <!-- ---------------------------------------------------------- -->
+                        <!-- CURVED CIRCLE CTA TEXT -->
+                        <!-- ---------------------------------------------------------- -->
                         <div class="curved-circle">
                           <!-- curved-circle start-->
                           <span class="curved-circle--item">
@@ -514,6 +570,9 @@
           </div>
           <!-- slider item end -->
         </div>
+        <!-- ---------------------------------------------------------- -->
+        <!-- SOCIAL ICONS START -->
+        <!-- ---------------------------------------------------------- -->
         <!-- social start -->
         <div class="main-slider__socails">
           <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
@@ -528,6 +587,9 @@
           ></a>
         </div>
         <!-- social end -->
+        <!-- ---------------------------------------------------------- -->
+        <!-- Phone Number Start -->
+        <!-- ---------------------------------------------------------- -->
         <!-- phone start -->
         <div class="main-slider__phone">
           <a href="tel:+926668880000">+92 666 888 0000</a>
@@ -535,6 +597,12 @@
         <!-- phone end -->
       </section>
       <!--Main Slider End-->
+      <!-- ---------------------------------------------------------- -->
+      <!-- MAIN SLIDER END -->
+      <!-- ---------------------------------------------------------- -->
+      <!-- ---------------------------------------------------------- -->
+      <!-- BRANDS WE'VE PARTNERED WITH START -->
+      <!-- ---------------------------------------------------------- -->
       <div class="client-carousel @@extraClassName">
         <div class="container">
           <h5 class="client-carousel__tilte">
@@ -1643,10 +1711,10 @@
           >
             <a href="index.html" class="main-footer__logo">
               <img
-                src="assets/images/footer-logo.png"
+                src="assets/images/bdlogo.png"
                 alt="ogency"
-                width="55"
-                height="55"
+                width="300"
+                height="58"
               /> </a
             ><!-- /.footer-logo -->
             <div class="main-footer__social">
@@ -1671,7 +1739,9 @@
             >
               <div class="main-footer__about">
                 <p class="footer-widget__text">Let’s start working together</p>
-                <a href="mailto:help@company.com">help@company.com</a>
+                <a href="mailto:info@brandefenders.com"
+                  >info@brandefenders.com</a
+                >
               </div>
               <!-- /.footer-widget -->
             </div>
@@ -1714,7 +1784,7 @@
           >
             © Copyright <span class="dynamic-year"></span
             ><!-- /.dynamic-year -->
-            by <a href="index.html">Ogency Template</a>
+            <a href="index.html">Brandefenders, LLC</a>
           </p>
         </div>
         <!-- /.container -->
@@ -1722,6 +1792,10 @@
       <!-- /.main-footer -->
     </div>
     <!-- /.page-wrapper -->
+
+    <!-- ---------------------------------------------------------- -->
+    <!-- MOBILE NAV WRAPPER  -->
+    <!-- ---------------------------------------------------------- -->
 
     <div class="mobile-nav__wrapper">
       <div class="mobile-nav__overlay mobile-nav__toggler"></div>
@@ -1765,7 +1839,11 @@
       </div>
       <!-- /.mobile-nav__content -->
     </div>
-    <!-- /.mobile-nav__wrapper -->
+    <!-- /.mobile-nav__wrapper end-->
+
+    <!-- ---------------------------------------------------------- -->
+    <!-- SEARCH POPUP  -->
+    <!-- ---------------------------------------------------------- -->
 
     <div class="search-popup">
       <div class="search-popup__overlay search-toggler"></div>
@@ -1782,7 +1860,11 @@
       </div>
       <!-- /.search-popup__content -->
     </div>
-    <!-- /.search-popup -->
+    <!-- /.search-popup end -->
+
+    <!-- ---------------------------------------------------------- -->
+    <!-- BACK TO START  -->
+    <!-- ---------------------------------------------------------- -->
 
     <!-- back-to-top-start -->
     <a href="#" class="scroll-top">
@@ -1796,6 +1878,10 @@
       </svg>
     </a>
     <!-- back-to-top-end -->
+
+    <!-- ---------------------------------------------------------- -->
+    <!-- SCRIPTS  -->
+    <!-- ---------------------------------------------------------- -->
 
     <script src="assets/vendors/jquery/jquery-3.5.1.min.js"></script>
     <script src="assets/vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
