--- a/index.html
+++ b/index.html
@@ -7,25 +7,24 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/assets/images/favicons/apple-touch-icon.png"
+      href="assets/images/favicons/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/assets/images/favicons/favicon-32x32.png"
+      href="assets/images/favicons/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/assets/images/favicons/favicon-16x16.png"
+      href="assets/images/favicons/favicon-16x16.png"
     />
-    <link rel="manifest" href="/assets/images/favicons/site.webmanifest" />
-    <meta
-      name="description"
-      content="Ogency HTML Template For Creative Agency"
-    />
+    <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
+
+    <!-- description meta tag -->
+    <meta name="description" content="Brandefenders" />
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
