add all basic pages to flyout menu

--- a/case-studies.html
+++ b/case-studies.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Main Services Page</title>
+    <title>Main Case Studies Page</title>
     <!-- favicons Icons -->
     <link
       rel="apple-touch-icon"
@@ -393,7 +393,7 @@
             <li><span>Services</span></li>
           </ul>
           <!-- /.page-breadcrumb list-unstyled -->
-          <h2 class="page-header__title">Services</h2>
+          <h2 class="page-header__title">Main Case Studies Page</h2>
           <!-- /.page-title -->
         </div>
         <!-- /.container -->
