--- a/index.html
+++ b/index.html
@@ -135,21 +135,31 @@
                                     />
                                     <div class="home-showcase__buttons">
                                       <a
-                                        href="index.html"
+                                        href="services.html"
                                         class="ogency-btn home-showcase__buttons__item"
-                                        >Multi Page</a
+                                        >Services</a
                                       >
                                       <a
-                                        href="index-one-page.html"
+                                        href="industries.html"
                                         class="ogency-btn home-showcase__buttons__item"
-                                        >One Page</a
+                                        >Industries</a
+                                      >
+                                      <a
+                                        href="projects.html"
+                                        class="ogency-btn home-showcase__buttons__item"
+                                        >Case Studies</a
+                                      >
+                                      <a
+                                        href="blog-grid.html"
+                                        class="ogency-btn home-showcase__buttons__item"
+                                        >Blog</a
                                       >
                                     </div>
                                     <!-- /.home-showcase__buttons -->
                                   </div>
                                   <!-- /.home-showcase__image -->
                                   <h3 class="home-showcase__title">
-                                    Homepage 01
+                                    Main Category Pages
                                   </h3>
                                   <!-- /.home-showcase__title -->
                                 </div>
@@ -165,21 +175,26 @@
                                     />
                                     <div class="home-showcase__buttons">
                                       <a
-                                        href="index-2.html"
+                                        href="service.html"
                                         class="ogency-btn home-showcase__buttons__item"
-                                        >Multi Page</a
+                                        >Service</a
                                       >
                                       <a
-                                        href="index-2-one-page.html"
+                                        href="industry.html"
                                         class="ogency-btn home-showcase__buttons__item"
-                                        >One Page</a
+                                        >Industry</a
+                                      >
+                                      <a
+                                        href="single-case-study.html"
+                                        class="ogency-btn home-showcase__buttons__item"
+                                        >Case Study</a
                                       >
                                     </div>
                                     <!-- /.home-showcase__buttons -->
                                   </div>
                                   <!-- /.home-showcase__image -->
                                   <h3 class="home-showcase__title">
-                                    Homepage 02
+                                    Single Pages
                                   </h3>
                                   <!-- /.home-showcase__title -->
                                 </div>
@@ -195,21 +210,21 @@
                                     />
                                     <div class="home-showcase__buttons">
                                       <a
-                                        href="index-3.html"
+                                        href="about.html"
                                         class="ogency-btn home-showcase__buttons__item"
-                                        >Multi Page</a
+                                        >About</a
                                       >
                                       <a
-                                        href="index-3-one-page.html"
+                                        href="blog-details-right.html"
                                         class="ogency-btn home-showcase__buttons__item"
-                                        >One Page</a
+                                        >Blog</a
                                       >
                                     </div>
                                     <!-- /.home-showcase__buttons -->
                                   </div>
                                   <!-- /.home-showcase__image -->
                                   <h3 class="home-showcase__title">
-                                    Homepage 03
+                                    Single Pages
                                   </h3>
                                   <!-- /.home-showcase__title -->
                                 </div>
@@ -227,15 +242,13 @@
                                       <a
                                         href="index-light.html"
                                         class="ogency-btn home-showcase__buttons__item"
-                                        >View Page</a
+                                        >TBD / NA</a
                                       >
                                     </div>
                                     <!-- /.home-showcase__buttons -->
                                   </div>
                                   <!-- /.home-showcase__image -->
-                                  <h3 class="home-showcase__title">
-                                    Homepage 04
-                                  </h3>
+                                  <h3 class="home-showcase__title">TBD / NA</h3>
                                   <!-- /.home-showcase__title -->
                                 </div>
                                 <!-- /.home-showcase__item -->
