--- a/service.html
+++ b/service.html
@@ -532,6 +532,7 @@
                     </h3>
                   </li>
                 </ul>
+
                 <div class="services-details__benefit">
                   <div class="row">
                     <div class="col-xl-6 col-lg-12 col-md-6">
@@ -576,6 +577,150 @@
                 </div>
               </div>
             </div>
+            <!-- ---------------------------------------------------------- -->
+            <!-- PROJECTS SECTION START   -->
+            <!-- ---------------------------------------------------------- -->
+            <section class="project-one @@extraClassName">
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-8">
+                    <div class="section-title">
+                      <h5
+                        class="section-title__tagline section-title__tagline--has-dots"
+                      >
+                        our work showcase
+                      </h5>
+                      <h2 class="section-title__title">
+                        Explore our best recently<br />
+                        completed projects
+                      </h2>
+                    </div>
+                    <!-- section-title -->
+                  </div>
+                  <div class="col-md-4 text-end">
+                    <a href="projects.html" class="ogency-btn">View All Work</a
+                    ><!-- section-btn -->
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-12">
+                    <!-- ---------------------------------------------------------- -->
+                    <!-- PROJECT 1   -->
+                    <!-- ---------------------------------------------------------- -->
+                    <a
+                      href="project-details.html"
+                      class="project-one__item wow fadeInUp animated animated"
+                      data-wow-delay="100ms"
+                    >
+                      <div class="project-one__item__wrapper">
+                        <span class="project-one__item__number"></span>
+                        <h3 class="project-one__item__title">
+                          Unique product design
+                        </h3>
+                        <!-- /.project-title -->
+                        <div class="project-one__item__btn">
+                          <span class="icon-down-right"></span>
+                        </div>
+                        <!-- /.project-btn -->
+                        <div class="project-one__item__hover">
+                          <img
+                            class="project-one__item__hover--img"
+                            src="assets/images/project/project-1-1.jpg"
+                            alt="ogency"
+                          />
+                        </div>
+                        <!-- /.project-hover-image -->
+                      </div>
+                    </a>
+                    <!-- ---------------------------------------------------------- -->
+                    <!-- PROJECT 2   -->
+                    <!-- ---------------------------------------------------------- -->
+                    <a
+                      href="project-details.html"
+                      class="project-one__item wow fadeInUp animated animated"
+                      data-wow-delay="200ms"
+                    >
+                      <div class="project-one__item__wrapper">
+                        <span class="project-one__item__number"></span>
+                        <h3 class="project-one__item__title">
+                          UI / UX Design for technology
+                        </h3>
+                        <!-- /.project-title -->
+                        <div class="project-one__item__btn">
+                          <span class="icon-down-right"></span>
+                        </div>
+                        <!-- /.project-btn -->
+                        <div class="project-one__item__hover">
+                          <img
+                            class="project-one__item__hover--img"
+                            src="assets/images/project/project-1-2.jpg"
+                            alt="ogency"
+                          />
+                        </div>
+                        <!-- /.project-hover-image -->
+                      </div>
+                    </a>
+                    <!-- ---------------------------------------------------------- -->
+                    <!-- PROJECT 3   -->
+                    <!-- ---------------------------------------------------------- -->
+                    <a
+                      href="project-details.html"
+                      class="project-one__item wow fadeInUp animated animated"
+                      data-wow-delay="300ms"
+                    >
+                      <div class="project-one__item__wrapper">
+                        <span class="project-one__item__number"></span>
+                        <h3 class="project-one__item__title">
+                          Crown digial agency site
+                        </h3>
+                        <!-- /.project-title -->
+                        <div class="project-one__item__btn">
+                          <span class="icon-down-right"></span>
+                        </div>
+                        <!-- /.project-btn -->
+                        <div class="project-one__item__hover">
+                          <img
+                            class="project-one__item__hover--img"
+                            src="assets/images/project/project-1-3.jpg"
+                            alt="ogency"
+                          />
+                        </div>
+                        <!-- /.project-hover-image -->
+                      </div>
+                    </a>
+                    <!-- ---------------------------------------------------------- -->
+                    <!-- PROJECT 4   -->
+                    <!-- ---------------------------------------------------------- -->
+                    <a
+                      href="project-details.html"
+                      class="project-one__item wow fadeInUp animated animated"
+                      data-wow-delay="400ms"
+                    >
+                      <div class="project-one__item__wrapper">
+                        <span class="project-one__item__number"></span>
+                        <h3 class="project-one__item__title">
+                          Creative marketing
+                        </h3>
+                        <!-- /.project-title -->
+                        <div class="project-one__item__btn">
+                          <span class="icon-down-right"></span>
+                        </div>
+                        <!-- /.project-btn -->
+                        <div class="project-one__item__hover">
+                          <img
+                            class="project-one__item__hover--img"
+                            src="assets/images/project/project-1-4.jpg"
+                            alt="ogency"
+                          />
+                        </div>
+                        <!-- /.project-hover-image -->
+                      </div>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </section>
+            <!-- Project End -->
           </div>
         </div>
       </section>
